apps/test-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  namespace: test-nginx
  labels:
    app: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-04
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
