apps/test-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: test-nginx
  labels:
    app: test-nginx
spec:
  type: LoadBalancer
  selector:
    app: test-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
